# crawler

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  compile_flags.txt  cpm.h  index.html  justfile  log.txt  main.odin  nob  nob.c  nob.cc  nob.h  nob.old  raygui.c
.cargo/: config.toml
assets/: palette.aseprite
assets/sprite/: dark_brick_wall.aseprite  gray_brick_wall.aseprite  test.aseprite  tileset.aseprite
cpm/: arrays.cc  common.cc  cpm.hh  display.cc  io.cc
engine/: engine.hh
game/: game.c  game.h  game.odin  main.cpp  skybox.c
src/: assets.c  assets.h  camera.rs  config.h  draw.rs  font.c  font.rs  game.c  game.h  game.rs  game_update.c  log.c  log.rs  main.c  main.rs  mem.c  menu.rs  player.rs  prelude.h  rawr.h  raygui_style.c  scene.rs  settings.c  settings.h  text.rs  tileset.c  time.c  util.c
src/draw/: draw.c  draw.h  mainmenu.c  theme.h  ui.c
src/level/: level.c  level.h
src/scene/: scene.c
src/scene/main_menu/: draw.c
src/scene/test/: draw.c
src/update/: update.c
src3/: main.cc
src3/game/: draw.cc  game.cc  game.hh  update.cc
