[package]
name = "crawler"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
package = {"*" = { opt-level = 3 }}

[dependencies]
anyhow = "1.0.98"
macroquad = { version = "0.4.14", features = ["audio"] }

[build-dependencies]
static_vcruntime = "2.0.0"
