[package]
name = "crawler"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
incremental = true

[profile.release]
lto = true
codegen-units = 1

[dependencies]
macroquad = "0.4.14"

[build-dependencies]
static_vcruntime = "2.0.0"
