[package]
name = "crawler"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[dependencies]
anyhow = "1.0.100"
macroquad = {version = "0.4.14", features = ["audio"]}

[build-dependencies]
static_vcruntime = "3.0.0"
